feat(controller/sms): 初始化发送手机验证码接口

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring-boot-web-starter</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -59,6 +64,9 @@
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.4.0</version>
+				<configuration>
+					<configurationFile>${basedir}/src/main/resources/db/mybatis/generatorConfig.xml</configurationFile>
+				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>mysql</groupId>
