--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/wechatshop
-    name: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+
+mybatis:
+  config-location: classpath:db/mybatis/config.xml
