--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,9 @@
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.4.0</version>
+                <!--<version>1.4.0</version>-->
+                <!--降低版本是因为 limit 插件不兼容上面的版本-->
+                <version>1.3.7</version>
                 <configuration>
                     <configurationFile>${basedir}/src/main/resources/db/mybatis/generatorConfig.xml</configurationFile>
                 </configuration>
@@ -158,6 +160,11 @@
                         <groupId>mysql</groupId>
                         <artifactId>mysql-connector-java</artifactId>
                         <version>${mysql.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.qiukeke</groupId>
+                        <artifactId>mybatis-generator-limit-plugin</artifactId>
+                        <version>1.0.4</version>
                     </dependency>
                 </dependencies>
             </plugin>
