--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,7 @@
                 <version>1.3.7</version>
                 <configuration>
                     <configurationFile>${basedir}/src/main/resources/db/mybatis/generatorConfig.xml</configurationFile>
+                    <overwrite>true</overwrite>
                 </configuration>
                 <dependencies>
                     <dependency>
