--- a/wechatshop-main/pom.xml
+++ b/wechatshop-main/pom.xml
@@ -13,10 +13,26 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>wechatshop-main</name>
     <description>wechatshop-main</description>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
     <dependencies>
+        <!--引入另一个 api 模块-->
+        <dependency>
+            <groupId>com.catmmao</groupId>
+            <artifactId>wechatshop-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- Zookeeper dependencies -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <type>pom</type>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
