--- a/wechatshop-order/pom.xml
+++ b/wechatshop-order/pom.xml
@@ -13,7 +13,18 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>wechatshop-order</name>
     <description>wechatshop-order</description>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- Zookeeper dependencies -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
 </project>
