--- a/wechatshop-main/src/main/resources/application.yml
+++ b/wechatshop-main/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: wechatshop
   datasource:
     url: jdbc:mysql://localhost:3306/wechatshop
     password: 123456
@@ -7,3 +9,13 @@ spring:
 
 mybatis:
   config-location: classpath:db/mybatis/config.xml
+
+# orderService 模块版本号
+wechatshop:
+  order:
+    version: 1.0.0
+
+dubbo:
+  registry:
+    # zookeeper 注册中心地址
+    address: zookeeper://127.0.0.1:2181
