--- a/wechatshop-order/src/main/resources/application.yml
+++ b/wechatshop-order/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
-    name: wechatshop-order
+    name: order
+  datasource:
+    url: jdbc:mysql://localhost:3306/order
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
 
 # 本模块版本号
 wechatshop:
@@ -11,9 +16,11 @@ dubbo:
   registry:
     # zookeeper 注册中心地址
     address: zookeeper://127.0.0.1:2181
-
   scan:
     base-packages: com.catmmao.wechatshop.orderService.service
 
 server:
   port: 8081
+
+mybatis:
+  config-location: classpath:db/mybatis/config.xml
